--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,9 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:background="@drawable/sports4"
-    android:layout_gravity="center"
+    android:gravity="center"
     android:visibility="visible"
     tools:context=".MainActivity">
-
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
