--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,20 +6,41 @@
     android:layout_height="match_parent"
     android:background="@drawable/sports4"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".Main2Activity">
 
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="match_parent"
+<!--    <com.google.android.material.button.MaterialButton-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="30dp"-->
+<!--        android:id="@+id/ind"-->
+<!--        android:text="Indoor Games"-->
+<!--        android:background="@drawable/indoorlogo"-->
+<!--        ></com.google.android.material.button.MaterialButton>-->
+    <ImageButton
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:id="@+id/ind"
-        android:text="Indoor Games"
-        ></com.google.android.material.button.MaterialButton>
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:background="@drawable/indoorlogo"
+        android:layout_margin="30dp"
+        android:id="@+id/ind"/>
+    <View
+        android:layout_width="200dp"
+        android:layout_height="1dp"
+        android:background="#000"/>
+    <ImageButton
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/out"
-        android:text="Outdoor Games"
-        ></com.google.android.material.button.MaterialButton>
+        android:layout_gravity="center"
+        android:layout_margin="30dp"
+        android:background="@drawable/outdoorlogo"
+        android:id="@+id/out"/>
+
+<!--    <com.google.android.material.button.MaterialButton-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/out"-->
+<!--        android:text="Outdoor Games"-->
+<!--        ></com.google.android.material.button.MaterialButton>-->
 
 </LinearLayout>
