--- a/app/src/main/res/layout/activity_indoorgames.xml
+++ b/app/src/main/res/layout/activity_indoorgames.xml
@@ -5,31 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/sports4"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".indoorgames">
 
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:text="Carrom"
-        android:id="@+id/ca"
-        />
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="chess"
-        android:id="@+id/ch"
-        />
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Table Tennis"
-        android:id="@+id/tt"
-        />
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:fitsSystemWindows="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/carrombutton"
+        android:id="@+id/ca"/>
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/chessbutton"
+        android:scaleType="fitCenter"
+        android:id="@+id/ch"/>
+
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/tabletennnisbutton"
+        android:scaleType="fitCenter"
+        android:id="@+id/tt"/>
 
 
 
