--- a/app/src/main/res/layout/activity_carrom.xml
+++ b/app/src/main/res/layout/activity_carrom.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sports4"
     tools:context=".carrom">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
