--- a/app/src/main/res/layout/activity_chess.xml
+++ b/app/src/main/res/layout/activity_chess.xml
@@ -4,11 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sports4"
     android:orientation="vertical"
     tools:context=".chess">
 
-    <include layout="@layout/activity_carrom_terms"
-
-        ></include>
 
 </LinearLayout>
