--- a/app/src/main/res/layout/activity_terms_and_condition.xml
+++ b/app/src/main/res/layout/activity_terms_and_condition.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/sports4"
-    tools:context=".carromTerms">
+    tools:context=".TermsAndCondition">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
@@ -17,7 +19,6 @@
             android:textStyle="bold"
             android:layout_gravity="center"
             android:textSize="30dp"
-            android:layout_marginTop="12dp"
             android:layout_marginBottom="30dp"/>
         <TextView
             android:layout_width="match_parent"
@@ -29,20 +30,10 @@
             android:textSize="18dp"
             android:text="@string/terms"
             android:layout_marginBottom="80dp"/>
-        <CheckBox
-            android:id="@+id/che"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:text="I agree to the terms &amp; Conditions"/>
-        <Button
-            android:layout_width="150dp"
-            android:id="@+id/ag"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Register"
-            android:textAllCaps="false"/>
+
+
 
     </LinearLayout>
 
-</ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
